objects/AW0204Obj__c.object
<CustomObject>
    <fields>
        <fullName>AnotherNumber__c</fullName>
        <label>AnotherNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emiler__c</fullName>
        <label>Emiler</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LooooongTextArea__c</fullName>
        <label>LooooongTextArea</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SomeDate__c</fullName>
        <label>SomeDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomeNewNuber__c</fullName>
        <label>SomeNewNuber</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomePercent__c</fullName>
        <label>SomePercent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WolfTime__c</fullName>
        <label>WolfTime</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>che__c</fullName>
        <defaultValue>false</defaultValue>
        <label>che</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANewEmail__c</fullName>
        <label>ANewEmail</label>
        <type>Email</type>
    </fields>
    <label>AW0204Obj</label>
    <nameField>
        <label>AW0204Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AW0204Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>